K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/authentications
            pathType: Prefix
            backend:
              service:
                name: users-clusterip-srv
                port:
                  number: 80
          - path: /api/wallets
            pathType: Prefix
            backend:
              service:
                name: users-clusterip-srv
                port:
                  number: 80
          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: users-clusterip-srv
                port:
                  number: 80
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: users-clusterip-srv
                port:
                  number: 80
          - path: /api/transactions
            pathType: Prefix
            backend:
              service:
                name: users-clusterip-srv
                port:
                  number: 80
          - path: /api/demo
            pathType: Prefix
            backend:
              service:
                name: orders-clusterip-srv
                port:
                  number: 80
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: orders-clusterip-srv
                port:
                  number: 80
          - path: /api/customers
            pathType: Prefix
            backend:
              service:
                name: orders-clusterip-srv
                port:
                  number: 80
          - path: /api/categories
            pathType: Prefix
            backend:
              service:
                name: shops-clusterip-srv
                port:
                  number: 80
          - path: /api/owners
            pathType: Prefix
            backend:
              service:
                name: shops-clusterip-srv
                port:
                  number: 80
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: shops-clusterip-srv
                port:
                  number: 80
          - path: /api/shops
            pathType: Prefix
            backend:
              service:
                name: shops-clusterip-srv
                port:
                  number: 80
